<resources>
    <string name="app_name">cursova</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_the_name_of_transport">Enter the name of transport</string>
    <string name="choose_your_type_of_transport">Choose your type of transport</string>
    <string name="car">Car</string>
    <string name="minibus">Minibus</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="save_info_about_transport">Save info about transport</string>
    <string name="name_of_the_item_transport">Name of transport</string>
    <string name="type_transport">Type of transport</string>
    <string name="save_info_about_event">Save info about event</string>
    <string name="service">Service</string>
    <string name="trip">Trip</string>
    <string name="repair">Repair</string>
    <string name="choose_type_of_event">Choose type of event</string>
    <string name="add_event">Add event</string>
    <string name="add_vehicle">Add Vehicle</string>
</resources>