<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addE.AddEventFragment">


    <EditText
        android:layout_marginTop="25dp"
        android:id="@+id/typeOfEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_type_of_event"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/transportTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/typeOfEvent">

        <RadioButton
            android:id="@+id/repair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repair"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_info_about_event"
        android:textSize="20sp"
        android:layout_margin="60dp"
        app:layout_constraintTop_toBottomOf="@id/transportTypeGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>